--- a/formulario.html
+++ b/formulario.html
@@ -25,19 +25,20 @@ body {
   
   </style>
   <body>
+    <div class="container">
     <div>
       <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-          <a class="navbar-brand" href="pagina_principal.html">pagina principal</a>
+          <a class="navbar-brand" href="pagina_principal.html">eibar</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="vitoria.html">Vitoria <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="formulario.html">formulario</a>
+                <a class="nav-link" href="formulario.html">Formulario</a>
               </li>
               <li class="nav-item dropdown">
             </div>
@@ -103,6 +104,7 @@ body {
                 </div>
               </div>
     </form>
+    </div>
               
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
