--- a/pagina_principal.html
+++ b/pagina_principal.html
@@ -38,7 +38,7 @@ body {
   </style>
   <body>    
     <div class="container">
-    <div>
+    <div class="bbb">
         
   
       <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
